--- a/public/css/style.css
+++ b/public/css/style.css
@@ -29,7 +29,7 @@ body {
     width: 155px;
 }
 #menu {
-    background:#3097d1;
+    background:#ac5330;
     width: 100%;
     min-width: 1519px;
     height: 50px;
@@ -55,7 +55,7 @@ body {
     display:none;
     list-style:none;
     position:absolute;
-    background-color:#3097d1;
+    background-color:#b16749;
     float: none;
     top:50px;
     width:154px;
@@ -148,7 +148,7 @@ body {
     flex-direction: column;
 }
 .informasiakun{
-    background-color: #3097d1;
+    background-color: #b36633;
     width: 750px;
     font-size: 24px;
     margin-left: auto;
