--- a/public/css/style.css
+++ b/public/css/style.css
@@ -165,6 +165,16 @@ body {
     display: flex;
     flex-direction: row;
 }
+.infoprofesi{
+    background-color:#69ecfd;
+    width: 1000px;
+    font-size: 20px;
+    height: 800px;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    flex-direction: row;
+}
 .infoakun p{
     margin-top: 15px;
     margin-bottom: 15px;
@@ -405,105 +415,6 @@ body {
     display: flex;
     flex-direction: row;
 }
-/*dropdown lokasi jawatimur*/
-.dropbtnjawatimur {
-
-    font-family: sans-serif;
-    color: black;
-    padding-bottom: 3px;
-    padding-left: 20px;
-    font-size: 15px;
-    border: none;
-    background-color:rgba(240, 241, 241, 1);
-    cursor: pointer;
-}
-
-/* Dropdown Content (Hidden by Default) */
-.dropdown-contentjawatimur {
-    display: none;
-    /* position: absolute; */
-    background-color: #f1f1f1;
-    /* min-width: 160px; */
-    /* box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); */
-    z-index: 1;
-    /* margin-left: 970px; */
-}
-
-/* Links inside the dropdown */
-.dropdown-contentjawatimur a {
-    color: black;
-    text-decoration: none;
-}
-/* .dropdown-contentlokasi a:hover {background-color: #ddd} */
-.show {display:block;}
-
-
-/*dropdown lokasi jawatengah*/
-.dropbtnjawatengah {
-
-    font-family: sans-serif;
-    color: black;
-    padding-bottom: 3px;
-    padding-left: 20px;
-    font-size: 15px;
-    border: none;
-    background-color:rgba(240, 241, 241, 1);
-    cursor: pointer;
-}
-
-/* Dropdown Content (Hidden by Default) */
-.dropdown-contentjawatengah {
-    display: none;
-    /* position: absolute; */
-    background-color: #f1f1f1;
-    /* min-width: 160px; */
-    /* box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); */
-    z-index: 1;
-    /* margin-left: 970px; */
-}
-
-/* Links inside the dropdown */
-.dropdown-contentjawatengah a {
-    color: black;
-    text-decoration: none;
-}
-/* .dropdown-contentlokasi a:hover {background-color: #ddd} */
-.show {display:block;}
-
-
-/*dropdown lokasi jawabarat*/
-.dropbtnjawabarat {
-
-    font-family: sans-serif;
-    color: black;
-    padding-bottom: 3px;
-    padding-left: 20px;
-    font-size: 15px;
-    border: none;
-    background-color:rgba(240, 241, 241, 1);
-    cursor: pointer;
-}
-
-/* Dropdown Content (Hidden by Default) */
-.dropdown-contentjawabarat {
-    display: none;
-    /* position: absolute; */
-    background-color: #f1f1f1;
-    /* min-width: 160px; */
-    /* box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); */
-    z-index: 1;
-    /* margin-left: 970px; */
-}
-
-/* Links inside the dropdown */
-.dropdown-contentjawabarat a {
-    color: black;
-    text-decoration: none;
-}
-/* .dropdown-contentlokasi a:hover {background-color: #ddd} */
-.show {display:block;}
-/* akhirprodukbanner */
-
 .list{
     padding-left: 75px;
     display: flex;
@@ -1141,7 +1052,7 @@ p.errordiv{color:#E80000;}
 }
 
 /*Upload produk*/
-.dropzoneuploadproduk{
+.dropzoneuploadproject{
     border-radius: 5px;
     border: 2px solid #ddd;
     margin: 10px;
@@ -1150,9 +1061,9 @@ p.errordiv{color:#E80000;}
     width: 40%;
     height: 200px;
 }
-.tampiluploadproduk{
+.tampiluploadproject{
 
-    padding-left: 30%;
+    padding-left: 330px;
     padding-top: 2%;
     width: 35%;
 }
@@ -1175,7 +1086,7 @@ p.errordiv{color:#E80000;}
 .tab {
     overflow: hidden;
     border: 1px solid #ccc;
-    background-color: #f7f7f7;
+    background-color: #5df8eb;
     height: 51px;
 }
 
@@ -1250,6 +1161,15 @@ p.errordiv{color:#E80000;}
     margin-top:30px;
     display:flex;
     flex-direction: column;
+    font-size:23px;
+}
+.infoprofesional{
+    margin-top:0px;
+    display:flex;
+    width: 1840px;
+    margin-left:103px;
+    background-color: white;
+    flex-direction: row;
     font-size:23px;
 }
 .barisinfo{
